Stretch Goal Navigation Background Color & Fixed

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -159,6 +159,10 @@ h2 {
 	margin: 10px 35px 10px 20px;
   }
   
+  .nav {
+	background-color:rgb(211,211,211, .5);
+	position: fixed;
+  }
   
   .container header nav a {
 	text-decoration: none;
